Fix image not appearing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ html {
     font-size: 16px;
 }
 
-.palebluecontent p, .presentation p {
+.palebluecontent p,.presentation p {
     font-size: 20px;
 }
 
@@ -39,6 +39,7 @@ html {
     margin: 50px auto;
 }
 
-.dot {
-    height: 400px;
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
